# baremetal

./: baremetal.cpp
rp2350_baremetal/: CMakeLists.txt  README.md  pico_sdk_import.cmake
